Update and rename 2019-12-16-istanbul-5-giorni.md to 2019-12-16-Istanbul.md

--- a/_posts/2019-12-16-Istanbul.md
+++ b/_posts/2019-12-16-Istanbul.md
@@ -12,3 +12,5 @@ invece il volo, fortunatamente per le mia ansia areoplanofoba, scivola tranquill
 anche questa volta non riesco a catturare il momento in cui il cambio di fuso mi fotte due ore in meno di un secondo, diasappunto, mi rimane un ultima cosa da immaginare prima che la realtà si imponga con il suo fare indifferente:  
 *come saranno questi turchi?* neanche avesse sentito i miei pensieri Ilaria mi fa notare che il capitano è donna e aggiunge alla faccia del paese retrogrado, va bene, vada per una partita a sudoku.  
 
+Istanbul ha sedici milioni di abitanti, il traffico dall'areoporto all'hotel
+
